5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1801_2575.log
== TEST (2019-06-12 19:08:20) 
-- CODE:
from numpy import*

v = input("qual ? ").split(",")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:51) 
-- CODE:
from numpy import*

v = array(eval(input("qual ? "))).split(",")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:12:01) 
-- CODE:
from numpy import*

v = (input("qual ? ")).split(",")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:12:35) 
-- CODE:
from numpy import*

v = (input("qual ? ")).split(',')
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:17:57) 
-- CODE:
from numpy import*

x = (3, dtype=int)

v = (input("qual ? ")).upper().split(',')

for i in v:
	if v[i] == "TV":
		i = i +1
	elif v[i] == "NETFLIX"
		i = i + 1
	elif v[i] == "YOUTUBE"
		i = i + 1
print(i)
-- ERROR:
File "XXXX", line 3
    x = (3, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:18:25) 
-- CODE:
from numpy import*

x =  zeros(3, dtype=int)

v = (input("qual ? ")).upper().split(',')

for i in v:
	if v[i] == "TV":
		i = i +1
	elif v[i] == "NETFLIX"
		i = i + 1
	elif v[i] == "YOUTUBE"
		i = i + 1
print(i)
-- ERROR:
File "XXXX", line 10
    elif v[i] == "NETFLIX"
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:18:35) 
-- CODE:
from numpy import*

x =  zeros(3, dtype=int)

v = (input("qual ? ")).upper().split(',')

for i in v:
	if v[i] == "TV":
		i = i +1
	elif v[i] == "NETFLIX":
		i = i + 1
	elif v[i] == "YOUTUBE":
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:16) 
-- CODE:
from numpy import*

x =  zeros(3, dtype=int)

v = (input("qual ? ")).upper().split(',')
i = 0 
for i in v:
	if v[i] == "TV":
		i = i +1
	elif v[i] == "NETFLIX":
		i = i + 1
	elif v[i] == "YOUTUBE":
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:23) 
-- CODE:
from numpy import*

x =  zeros(3, dtype=int)

v = (input("qual ? ")).upper().split(',')

for i in v:
	if v[i] == "TV":
		x[0] = x[0]+1
	elif v[i] == "NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:45) 
-- CODE:
from numpy import*

x =  zeros(3, dtype=int)

v = (input("qual ? ")).upper().split(',')

for i in len(v):
	if v[i] == "TV":
		x[0] = x[0]+1
	elif v[i] == "NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:48) 
-- CODE:
from numpy import*

x =  zeros(3, dtype=int)

v = (input("qual ? ")).upper().split(',')

for i in v:
	if i == "TV":
		x[0] = x[0]+1
	elif i == "NETFLIX":
		x[1] = x[1] + 1
	elif i == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:01) 
-- CODE:
from numpy import*

v = (input("qual ? ")).upper().split(',')

for i in v:
x =  zeros(3, dtype=int)
	if i == "TV":
		x[0] = x[0]+1
	elif i == "NETFLIX":
		x[1] = x[1] + 1
	elif i == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
File "XXXX", line 6
    x =  zeros(3, dtype=int)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:25) 
-- CODE:
from numpy import*

x =  zeros(3, dtype=int)

v = (input("qual ? ")).upper().split(',')

for i in v:
	if i == "TV":
		x[0] = x[0]+1
	elif i == "NETFLIX":
		x[1] = x[1] + 1
	elif i == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:48) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "TV":
		x[0] = x[0]+1
	elif i == "NETFLIX":
		x[1] = x[1] + 1
	elif i == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:25:03) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if i == "TV":
		x[0] = x[0]+1
	elif i == "NETFLIX":
		x[1] = x[1] + 1
	elif i == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:25:54) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "TV":
		x[0] = x[0]+1
	elif v[i] == "NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:29:48) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "TV":
		x[0] = x[0]+1
	elif v[i] == "NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:29:55) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "TV":
		x[0] = x[0]+1
	elif v[i] == "NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.29657
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:30:03) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "TV":
		x[0] = x[0]+1
	elif v[i] == "NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:31:50) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper()
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "TV":
		x[0] = x[0]+1
	elif v[i] == "NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == "YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:22) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper()
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:46) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper().slipt(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:43) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:36:25) 
-- CODE:
from numpy import*


v = (input("qual ? ")).upper()
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:39:12) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper()
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:39:27) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:39:50) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.21564
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:40:03) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:40:38) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:41:38) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:43:29) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.23605
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 1 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:43:40) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:44:13) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:44:43) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if v[i] == 'TV':
		x[0] = x[0]+1
	elif v[i] == 'NETFLIX':
		x[1] = x[1] + 1
	elif v[i] == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:44:56) 
-- CODE:
from numpy import*


v = (input("qual? ")).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:08) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:23) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(' "," ')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:43) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(" , ")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:57) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:46:25) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == ""TV""":
		x[0] = x[0]+1
	elif v[i] == ""NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == ""YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
File "XXXX", line 8
    if v[i] == ""TV""":
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:46:34) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == ""TV":
		x[0] = x[0]+1
	elif v[i] == ""NETFLIX":
		x[1] = x[1] + 1
	elif v[i] == ""YOUTUBE":
		x[2] = x[2] + 1
print(x)
-- ERROR:
File "XXXX", line 8
    if v[i] == ""TV":
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:47:18) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == '"TV"':
		x[0] = x[0]+1
	elif v[i] == '"NETFLIX"':
		x[1] = x[1] + 1
	elif v[i] == '"YOUTUBE"':
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.22197
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:47:19) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == '"TV"':
		x[0] = x[0]+1
	elif v[i] == '"NETFLIX"':
		x[1] = x[1] + 1
	elif v[i] == '"YOUTUBE"':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:47:40) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == '"TV"':
		x[0] = x[0]+1
	elif v[i] == '"NETFLIX"':
		x[1] = x[1] + 1
	elif v[i] == '"YOUTUBE"':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:48:16) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:50:03) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(',')
x =  zeros(3, dtype=int)

for i in range(v):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:50:21) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(',')
x =  zeros(3, dtype=int)

for i in len(v):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:51:08) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper()
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:51:41) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(" ',' ")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:51:57) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(", ")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:52:07) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:52:31) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",",",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:53:00) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",",)
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:53:21) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(,)
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
File "XXXX", line 4
    v = (input()).upper().split(,)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:53:38) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(,",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
File "XXXX", line 4
    v = (input()).upper().split(,",")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:53:51) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(','",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:54:10) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
File "XXXX", line 4
    v = (input()).upper().split(",",")
                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:54:22) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",","")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:54:35) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if v[i] == "'TV'":
		x[0] = x[0]+1
	elif v[i] == "'NETFLIX'":
		x[1] = x[1] + 1
	elif v[i] == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:55:00) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in range(size(v)):
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:55:24) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:57:08) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:57:38) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",")
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:57:58) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(" ")
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:58:16) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(",  ")
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:05:57) 
-- CODE:
from numpy import*


v = (input("qual?" )).upper().split(',',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
File "XXXX", line 4
    v = (input()).upper().split(',',')
                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:06:17) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',',)
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:06:33) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.20232
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 1 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:06:34) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:06:52) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(' ,')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:07:00) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(' ,')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:07:17) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split('" ",')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:07:30) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split('",",')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:07:44) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(",")
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:09:36) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split( ' , ' )
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:09:36) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split( ' , ' )
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:09:45) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(' , ' )
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:10:02) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(' ,' )
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:10:14) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:10:15) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:10:39) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == 'TV':
		x[0] = x[0]+1
	elif i == 'NETFLIX':
		x[1] = x[1] + 1
	elif i == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:11:18) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == 'TV,':
		x[0] = x[0]+1
	elif i == 'NETFLIX,':
		x[1] = x[1] + 1
	elif i == 'YOUTUBE,':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:11:45) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV,'"":
		x[0] = x[0]+1
	elif i == "'NETFLIX,'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE,'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
File "XXXX", line 8
    if i == "'TV,'"":
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:11:57) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV,'":
		x[0] = x[0]+1
	elif i == "'NETFLIX,'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE,'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:12:14) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:15:14) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split('[,]')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:15:27) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split('[ , ]')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:16:00) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split([","])
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:16:14) 
-- CODE:
from numpy import*


v = input("qual?" ).upper().split[","]
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:18:56) 
-- CODE:
from numpy import*


v = input("qual?" ).upper()
x =  zeros(3, dtype=int)

for i in v:
	if i == 'TV':
		x[0] = x[0]+1
	elif i == 'NETFLIX':
		x[1] = x[1] + 1
	elif i == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:19:37) 
-- CODE:
from numpy import*


v = input("qual?" ).split(',').upper()
x =  zeros(3, dtype=int)

for i in v:
	if i == 'TV':
		x[0] = x[0]+1
	elif i == 'NETFLIX':
		x[1] = x[1] + 1
	elif i == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:19:57) 
-- CODE:
from numpy import*


v = input("qual?" ).split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == 'TV':
		x[0] = x[0]+1
	elif i == 'NETFLIX':
		x[1] = x[1] + 1
	elif i == 'YOUTUBE':
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:20:18) 
-- CODE:
from numpy import*


v = input("qual?" ).split(',')
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:49:55) 
-- CODE:
from numpy import*


v = array(eval(input("qual?" ))).upper()
x =  zeros(3, dtype=int)

for i in v:
	if i == "'TV'":
		x[0] = x[0]+1
	elif i == "'NETFLIX'":
		x[1] = x[1] + 1
	elif i == "'YOUTUBE'":
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
